[GPUP] Add sandbox telemetry for IOSurfaceAcceleratorClient https://bugs.webkit.org/show_bug.cgi?id=287163 rdar://144316067
Reviewed by Chris Dumez.

Add sandbox telemetry for IOSurfaceAcceleratorClient in the GPU process on iOS.

* Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.GPU.sb.in:
* Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.WebContent.sb.in:

Canonical link: https://commits.webkit.org/290006@main

--- a/Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.GPU.sb.in
+++ b/Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.GPU.sb.in
@@ -284,9 +284,16 @@
         (global-name "com.apple.CARenderServer"))
 
     ; UIKit-required IOKit nodes.
-    (allow iokit-open-user-client
+    (allow iokit-open-user-client (with telemetry) (with report)
         (iokit-user-client-class "IOSurfaceAcceleratorClient")
-        ;; Requires by UIView -> UITextMagnifierRenderer -> UIWindow
+        (apply-message-filter
+            (allow (with telemetry) (with report) (with message "IOSurfaceAcceleratorClient")
+                iokit-async-external-method
+                iokit-external-trap
+                iokit-external-method)))
+        
+    ;; Requires by UIView -> UITextMagnifierRenderer -> UIWindow
+    (allow iokit-open-user-client
         (iokit-user-client-class "IOSurfaceRootUserClient"))
 
     ;; Silence sandbox violations from apps trying to create the empty plist if it doesn't exist.
