--- a/Source/WebKit/UIProcess/WebPasteboardProxy.messages.in
+++ b/Source/WebKit/UIProcess/WebPasteboardProxy.messages.in
@@ -27,45 +27,45 @@
 ]
 messages -> WebPasteboardProxy {
 #if PLATFORM(IOS_FAMILY)
-    WriteURLToPasteboard(struct WebCore::PasteboardURL url, String pasteboardName, std::optional<WebCore::PageIdentifier> pageID)
-    WriteWebContentToPasteboard(struct WebCore::PasteboardWebContent content, String pasteboardName, std::optional<WebCore::PageIdentifier> pageID)
-    WriteImageToPasteboard(struct WebCore::PasteboardImage pasteboardImage, String pasteboardName, std::optional<WebCore::PageIdentifier> pageID)
-    WriteStringToPasteboard(String pasteboardType, String text, String pasteboardName, std::optional<WebCore::PageIdentifier> pageID)
-    UpdateSupportedTypeIdentifiers(Vector<String> identifiers, String pasteboardName, std::optional<WebCore::PageIdentifier> pageID)
+    WriteURLToPasteboard(struct WebCore::PasteboardURL url, String pasteboardName, std::optional<WebKit::WebPageProxyIdentifier> pageID)
+    WriteWebContentToPasteboard(struct WebCore::PasteboardWebContent content, String pasteboardName, std::optional<WebKit::WebPageProxyIdentifier> pageID)x
+    WriteImageToPasteboard(struct WebCore::PasteboardImage pasteboardImage, String pasteboardName, std::optional<WebKit::WebPageProxyIdentifier> pageID)
+    WriteStringToPasteboard(String pasteboardType, String text, String pasteboardName, std::optional<WebKit::WebPageProxyIdentifier> pageID)
+    UpdateSupportedTypeIdentifiers(Vector<String> identifiers, String pasteboardName, std::optional<WebKit::WebPageProxyIdentifier> pageID)
 #endif
 
-    WriteCustomData(Vector<WebCore::PasteboardCustomData> data, String pasteboardName, std::optional<WebCore::PageIdentifier> pageID) -> (int64_t changeCount) Synchronous
-    TypesSafeForDOMToReadAndWrite(String pasteboardName, String origin, std::optional<WebCore::PageIdentifier> pageID) -> (Vector<String> types) Synchronous
-    AllPasteboardItemInfo(String pasteboardName, int64_t changeCount, std::optional<WebCore::PageIdentifier> pageID) -> (std::optional<Vector<WebCore::PasteboardItemInfo>> allInfo) Synchronous
-    InformationForItemAtIndex(size_t index, String pasteboardName, int64_t changeCount, std::optional<WebCore::PageIdentifier> pageID) -> (std::optional<WebCore::PasteboardItemInfo> info) Synchronous
-    GetPasteboardItemsCount(String pasteboardName, std::optional<WebCore::PageIdentifier> pageID) -> (uint64_t itemsCount) Synchronous
-    ReadStringFromPasteboard(size_t index, String pasteboardType, String pasteboardName, std::optional<WebCore::PageIdentifier> pageID) -> (String string) Synchronous
-    ReadURLFromPasteboard(size_t index, String pasteboardName, std::optional<WebCore::PageIdentifier> pageID) -> (String url, String title) Synchronous
-    ReadBufferFromPasteboard(std::optional<size_t> index, String pasteboardType, String pasteboardName, std::optional<WebCore::PageIdentifier> pageID) -> (RefPtr<WebCore::SharedBuffer> buffer) Synchronous
-    ContainsStringSafeForDOMToReadForType(String type, String pasteboardName, std::optional<WebCore::PageIdentifier> pageID) -> (bool result) Synchronous
+    WriteCustomData(Vector<WebCore::PasteboardCustomData> data, String pasteboardName, std::optional<WebKit::WebPageProxyIdentifier> pageID) -> (int64_t changeCount) Synchronous
+    TypesSafeForDOMToReadAndWrite(String pasteboardName, String origin, std::optional<WebKit::WebPageProxyIdentifier> pageID) -> (Vector<String> types) Synchronous
+    AllPasteboardItemInfo(String pasteboardName, int64_t changeCount, std::optional<WebKit::WebPageProxyIdentifier> pageID) -> (std::optional<Vector<WebCore::PasteboardItemInfo>> allInfo) Synchronous
+    InformationForItemAtIndex(size_t index, String pasteboardName, int64_t changeCount, std::optional<WebKit::WebPageProxyIdentifier> pageID) -> (std::optional<WebCore::PasteboardItemInfo> info) Synchronous
+    GetPasteboardItemsCount(String pasteboardName, std::optional<WebKit::WebPageProxyIdentifier> pageID) -> (uint64_t itemsCount) Synchronous
+    ReadStringFromPasteboard(size_t index, String pasteboardType, String pasteboardName, std::optional<WebKit::WebPageProxyIdentifier> pageID) -> (String string) Synchronous
+    ReadURLFromPasteboard(size_t index, String pasteboardName, std::optional<WebKit::WebPageProxyIdentifier> pageID) -> (String url, String title) Synchronous
+    ReadBufferFromPasteboard(std::optional<size_t> index, String pasteboardType, String pasteboardName, std::optional<WebKit::WebPageProxyIdentifier> pageID) -> (RefPtr<WebCore::SharedBuffer> buffer) Synchronous
+    ContainsStringSafeForDOMToReadForType(String type, String pasteboardName, std::optional<WebKit::WebPageProxyIdentifier> pageID) -> (bool result) Synchronous
 
 #if PLATFORM(COCOA)
     # Pasteboard messages.
-    GetNumberOfFiles(String pasteboardName, std::optional<WebCore::PageIdentifier> pageID) -> (uint64_t numberOfFiles) Synchronous
-    GetPasteboardTypes(String pasteboardName, std::optional<WebCore::PageIdentifier> pageID) -> (Vector<String> types) Synchronous
-    GetPasteboardPathnamesForType(String pasteboardName, String pasteboardType, std::optional<WebCore::PageIdentifier> pageID) -> (Vector<String> pathnames, Vector<WebKit::SandboxExtensionHandle> sandboxExtensions) Synchronous
-    GetPasteboardStringForType(String pasteboardName, String pasteboardType, std::optional<WebCore::PageIdentifier> pageID) -> (String string) Synchronous
-    GetPasteboardStringsForType(String pasteboardName, String pasteboardType, std::optional<WebCore::PageIdentifier> pageID) -> (Vector<String> strings) Synchronous
-    GetPasteboardBufferForType(String pasteboardName, String pasteboardType, std::optional<WebCore::PageIdentifier> pageID) -> (struct WebCore::PasteboardBuffer pasteboardBuffer) Synchronous
-    GetPasteboardChangeCount(String pasteboardName, std::optional<WebCore::PageIdentifier> pageID) -> (int64_t changeCount) Synchronous
-    GetPasteboardColor(String pasteboardName, std::optional<WebCore::PageIdentifier> pageID) -> (WebCore::Color color) Synchronous
-    GetPasteboardURL(String pasteboardName, std::optional<WebCore::PageIdentifier> pageID) -> (String urlString) Synchronous
-    AddPasteboardTypes(String pasteboardName, Vector<String> pasteboardTypes, std::optional<WebCore::PageIdentifier> pageID) -> (int64_t changeCount) Synchronous
-    SetPasteboardTypes(String pasteboardName, Vector<String> pasteboardTypes, std::optional<WebCore::PageIdentifier> pageID) -> (int64_t changeCount) Synchronous
-    SetPasteboardURL(struct WebCore::PasteboardURL pasteboardURL, String pasteboardName, std::optional<WebCore::PageIdentifier> pageID) -> (int64_t changeCount) Synchronous
-    SetPasteboardColor(String pasteboardName, WebCore::Color color, std::optional<WebCore::PageIdentifier> pageID) -> (int64_t changeCount) Synchronous
-    SetPasteboardStringForType(String pasteboardName, String pasteboardType, String string, std::optional<WebCore::PageIdentifier> pageID) -> (int64_t changeCount) Synchronous
-    SetPasteboardBufferForType(String pasteboardName, String pasteboardType, RefPtr<WebCore::SharedBuffer> buffer, std::optional<WebCore::PageIdentifier> pageID) -> (int64_t changeCount) Synchronous
-    ContainsURLStringSuitableForLoading(String pasteboardName, std::optional<WebCore::PageIdentifier> pageID) -> (bool result) Synchronous
-    URLStringSuitableForLoading(String pasteboardName, std::optional<WebCore::PageIdentifier> pageID) -> (String url, String title) Synchronous
+    GetNumberOfFiles(String pasteboardName, std::optional<WebKit::WebPageProxyIdentifier> pageID) -> (uint64_t numberOfFiles) Synchronous
+    GetPasteboardTypes(String pasteboardName, std::optional<WebKit::WebPageProxyIdentifier> pageID) -> (Vector<String> types) Synchronous
+    GetPasteboardPathnamesForType(String pasteboardName, String pasteboardType, std::optional<WebKit::WebPageProxyIdentifier> pageID) -> (Vector<String> pathnames, Vector<WebKit::SandboxExtensionHandle> sandboxExtensions) Synchronous
+    GetPasteboardStringForType(String pasteboardName, String pasteboardType, std::optional<WebKit::WebPageProxyIdentifier> pageID) -> (String string) Synchronous
+    GetPasteboardStringsForType(String pasteboardName, String pasteboardType, std::optional<WebKit::WebPageProxyIdentifier> pageID) -> (Vector<String> strings) Synchronous
+    GetPasteboardBufferForType(String pasteboardName, String pasteboardType, std::optional<WebKit::WebPageProxyIdentifier> pageID) -> (struct WebCore::PasteboardBuffer pasteboardBuffer) Synchronous
+    GetPasteboardChangeCount(String pasteboardName, std::optional<WebKit::WebPageProxyIdentifier> pageID) -> (int64_t changeCount) Synchronous
+    GetPasteboardColor(String pasteboardName, std::optional<WebKit::WebPageProxyIdentifier> pageID) -> (WebCore::Color color) Synchronous
+    GetPasteboardURL(String pasteboardName, std::optional<WebKit::WebPageProxyIdentifier> pageID) -> (String urlString) Synchronous
+    AddPasteboardTypes(String pasteboardName, Vector<String> pasteboardTypes, std::optional<WebKit::WebPageProxyIdentifier> pageID) -> (int64_t changeCount) Synchronous
+    SetPasteboardTypes(String pasteboardName, Vector<String> pasteboardTypes, std::optional<WebKit::WebPageProxyIdentifier> pageID) -> (int64_t changeCount) Synchronous
+    SetPasteboardURL(struct WebCore::PasteboardURL pasteboardURL, String pasteboardName, std::optional<WebKit::WebPageProxyIdentifier> pageID) -> (int64_t changeCount) Synchronous
+    SetPasteboardColor(String pasteboardName, WebCore::Color color, std::optional<WebKit::WebPageProxyIdentifier> pageID) -> (int64_t changeCount) Synchronous
+    SetPasteboardStringForType(String pasteboardName, String pasteboardType, String string, std::optional<WebKit::WebPageProxyIdentifier> pageID) -> (int64_t changeCount) Synchronous
+    SetPasteboardBufferForType(String pasteboardName, String pasteboardType, RefPtr<WebCore::SharedBuffer> buffer, std::optional<WebKit::WebPageProxyIdentifier> pageID) -> (int64_t changeCount) Synchronous
+    ContainsURLStringSuitableForLoading(String pasteboardName, std::optional<WebKit::WebPageProxyIdentifier> pageID) -> (bool result) Synchronous
+    URLStringSuitableForLoading(String pasteboardName, std::optional<WebKit::WebPageProxyIdentifier> pageID) -> (String url, String title) Synchronous
 
 #if ENABLE(IPC_TESTING_API)
-    TestIPCSharedMemory(String pasteboardName, String pasteboardType, WebCore::SharedMemory::Handle handle, std::optional<WebCore::PageIdentifier> pageID) -> (int64_t changeCount, String buffer) Synchronous
+    TestIPCSharedMemory(String pasteboardName, String pasteboardType, WebCore::SharedMemory::Handle handle, std::optional<WebKit::WebPageProxyIdentifier> pageID) -> (int64_t changeCount, String buffer) Synchronous
 #endif
 
 #endif
