[iOS] Add required mig syscall in the Networking process sandbox https://bugs.webkit.org/show_bug.cgi?id=287269 rdar://144397669
Reviewed by Chris Dumez.

* Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.Networking.sb.in:

Canonical link: https://commits.webkit.org/290045@main

--- a/Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.Networking.sb.in
+++ b/Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.Networking.sb.in
@@ -941,6 +941,7 @@
         io_server_version
         io_service_open_extended
         mach_exception_raise
+        mach_memory_entry_ownership
         mach_port_extract_right
         mach_port_get_context_from_user
         mach_port_get_refs
