Enable -Wunsafe-buffer-usage-in-libc-call https://bugs.webkit.org/show_bug.cgi?id=287209 rdar://144351483
Reviewed by David Kilzer.

Only very recent compilers enforce this warning.

I built locally with one of them and it seems to pass.

Also fixed up some cases I missed before.

* Configurations/CommonBase.xcconfig: I'm leaving behind some of the .xcconfig
support for disabling this warning for now, just in case.

* Source/WTF/wtf/Compiler.h: Skip the new warning when skipping warnings.

* Source/WTF/wtf/StdLibExtras.h: Put our skip markers inside our macro because
markers around the macro only seem to take effect when defining the macro,
and not when expanding it.

* Configurations/CommonBase.xcconfig: Enable.

Canonical link: https://commits.webkit.org/290060@main

--- a/Configurations/CommonBase.xcconfig
+++ b/Configurations/CommonBase.xcconfig
@@ -68,7 +68,7 @@ GCC_WARN_NON_VIRTUAL_DESTRUCTOR = YES;
 WK_COMMON_WARNING_CFLAGS = -Wall -Wc99-designator -Wconditional-uninitialized -Wextra -Wdeprecated-enum-enum-conversion -Wdeprecated-enum-float-conversion -Wenum-float-conversion -Wfinal-dtor-non-final-class -Wformat=2 -Wmisleading-indentation -Wreorder-init-list -Wundef -Wvla;
 WARNING_CFLAGS = $(inherited) $(WK_COMMON_WARNING_CFLAGS) $(WK_SANITIZER_WARNING_CFLAGS);
 
-WK_NO_UNSAFE_BUFFER_USAGE_IN_LIBC_CALL = -Wno-unknown-warning-option -Wno-unsafe-buffer-usage-in-libc-call;
+WK_NO_UNSAFE_BUFFER_USAGE_IN_LIBC_CALL = ;
 WK_NO_UNSAFE_BUFFER_USAGE_IN_LIBC_CALL[sdk=macosx13*] = ;
 WK_NO_UNSAFE_BUFFER_USAGE_IN_LIBC_CALL[sdk=macosx14*] = ;
 WK_NO_UNSAFE_BUFFER_USAGE_IN_LIBC_CALL[sdk=macosx15.0*] = ;
