[macOS] Refactor top content inset logic to account for content insets on all rect edges https://bugs.webkit.org/show_bug.cgi?id=287128
Reviewed by Simon Fraser and Tim Horton.

Currently, the `-_topContentInset` SPI on macOS is propagated through WebKit into WebCore as a
single `float` value through `Page`, `FrameView`, various scrolling/compositing-related classes,
and many other codepaths. In preparation for exposing API to control content insets on all sides of
a webpage on macOS, this PR refactors support for top content inset in WebKit and WebCore to plumb
a full `RectEdges<float>` (i.e. `FloatBoxExtent`) through the engine, instead of just a single
`float` for the top content inset.

Note that there should be no change in behavior yet, since the ability for clients to set non-zero
left/right/bottom content insets does not exist yet. In a subsequent patch, I'll add this capability
along with tests to exercise it.

See below for more details.

* Source/WebCore/Headers.cmake:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:

Drive-by fix: add `FrameView.cpp` to the Xcode project. This source file is currently compiled as
part of unified sources, but is absent from Xcode (making text searches skip this file).

* Source/WebCore/inspector/InspectorOverlay.cpp:
(WebCore::InspectorOverlay::drawBounds):
(WebCore::InspectorOverlay::drawRulers):
(WebCore::InspectorOverlay::drawElementTitle):
(WebCore::InspectorOverlay::buildGridOverlay):

Swap `topContentInset` for `obscuredContentInsets`.

* Source/WebCore/page/FrameView.cpp:
(WebCore::FrameView::obscuredContentInsets const):
(WebCore::FrameView::topContentInset const): Deleted.

Replace `topContentInset` with `obscuredContentInsets`; rename `TopContentInsetType` to `InsetType`.

* Source/WebCore/page/FrameView.h:
* Source/WebCore/page/LocalFrameView.cpp:
(WebCore::LocalFrameView::obscuredContentInsetsDidChange):

Rename `topContentInsetDidChange` → `obscuredContentInsetsDidChange`.

(WebCore::LocalFrameView::yPosit

--- a/Source/WebKit/Shared/RemoteLayerTree/RemoteScrollingCoordinatorTransaction.serialization.in
+++ b/Source/WebKit/Shared/RemoteLayerTree/RemoteScrollingCoordinatorTransaction.serialization.in
@@ -105,7 +105,7 @@ header: <WebCore/ScrollingStatePositionedNode.h>
     [OptionalTupleBit=WebCore::ScrollingStateNode::Property::HeaderHeight] int headerHeight()
     [OptionalTupleBit=WebCore::ScrollingStateNode::Property::FooterHeight] int footerHeight()
     [OptionalTupleBit=WebCore::ScrollingStateNode::Property::BehaviorForFixedElements] WebCore::ScrollBehaviorForFixedElements scrollBehaviorForFixedElements()
-    [OptionalTupleBit=WebCore::ScrollingStateNode::Property::TopContentInset] float topContentInset()
+    [OptionalTupleBit=WebCore::ScrollingStateNode::Property::ObscuredContentInsets] WebCore::FloatBoxExtent obscuredContentInsets()
     [OptionalTupleBit=WebCore::ScrollingStateNode::Property::VisualViewportIsSmallerThanLayoutViewport] bool visualViewportIsSmallerThanLayoutViewport()
     [OptionalTupleBit=WebCore::ScrollingStateNode::Property::AsyncFrameOrOverflowScrollingEnabled] bool asyncFrameOrOverflowScrollingEnabled()
     [OptionalTupleBit=WebCore::ScrollingStateNode::Property::WheelEventGesturesBecomeNonBlocking] bool wheelEventGesturesBecomeNonBlocking();
