Don't do silent push tracking for declarative push messages rdar://144288698 https://bugs.webkit.org/show_bug.cgi?id=287296
Reviewed by Ben Nham.

If a pending push message is declarative and the PushClientConnection has declarative push enabled,
do not start the silent push timer.

* Source/WebKit/NetworkProcess/NetworkProcess.cpp:
(WebKit::NetworkProcess::addWebsiteDataStore):
* Source/WebKit/Shared/WebPushDaemonConnectionConfiguration.h:
* Source/WebKit/Shared/WebPushDaemonConnectionConfiguration.serialization.in:
* Source/WebKit/webpushd/PushClientConnection.h:
(WebPushD::PushClientConnection::declarativeWebPushEnabled const):
* Source/WebKit/webpushd/PushClientConnection.mm:
(WebPushD::PushClientConnection::create):
(WebPushD::PushClientConnection::PushClientConnection):
* Source/WebKit/webpushd/WebPushDaemon.mm:
(WebPushD::WebPushDaemon::getPendingPushMessage):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WebPushDaemon.mm:
(TestWebKitAPI::(WebPushDPushNotificationEventTest, Basic)):

Canonical link: https://commits.webkit.org/290070@main

--- a/Source/WebKit/Shared/WebPushDaemonConnectionConfiguration.serialization.in
+++ b/Source/WebKit/Shared/WebPushDaemonConnectionConfiguration.serialization.in
@@ -27,4 +27,5 @@ webkit_platform_headers: "ArgumentCoders.h" "WebPushDaemonConnectionConfiguratio
     String bundleIdentifierOverride;
     String pushPartitionString;
     std::optional<WTF::UUID> dataStoreIdentifier;
+    bool declarativeWebPushEnabled;
 };
