[macOS] Make it possible for clients to set a left obscured content inset https://bugs.webkit.org/show_bug.cgi?id=287340 rdar://144115092
Reviewed by Tim Horton.

Add (partial) support for a new SPI on macOS:

```
- (void)_setObscuredContentInsets:(NSEdgeInsets)insets immediate:(BOOL)immediate;
```

...which allows WebKit clients to set content insets on all edges, which represents regions of the
page that are obscured by the app. This patch also adjusts related testing-only helpers that
currently set top content inset via `testRunner`, such that they can now be used to specify content
insets on all sides.

* LayoutTests/fast/scrolling/latching/scroll-select-bottom-test.html:
* LayoutTests/fast/scrolling/mac/async-scroll-overflow-top-inset.html:
* LayoutTests/platform/mac-wk2/accessibility/content-inset-scrollview-frame.html:
* LayoutTests/platform/mac-wk1/fast/backgrounds/top-content-inset-fixed-attachment.html:
* LayoutTests/platform/mac/fast/events/content-inset-hit-testing-in-frame.html:
* LayoutTests/platform/mac/fast/events/content-inset-hit-testing.html:
* LayoutTests/scrollingcoordinator/mac/top-content-inset-to-zero.html:
* LayoutTests/tiled-drawing/scrolling/scroll-with-top-left-content-inset-expected.html: Added.
* LayoutTests/tiled-drawing/scrolling/scroll-with-top-left-content-inset.html: Added.

Add a new layout test to exercise both vertical and horizontal scrolling in a web view with both top
and left content insets.

* LayoutTests/tiled-drawing/scrolling/non-fast-region/top-content-inset-header.html:
* LayoutTests/tiled-drawing/scrolling/non-fast-region/top-content-inset.html:
* LayoutTests/tiled-drawing/top-content-inset-fixed-attachment-body.html:
* LayoutTests/tiled-drawing/top-content-inset-fixed-attachment-cover-expected.html:
* LayoutTests/tiled-drawing/top-content-inset-fixed-attachment-cover-local-expected.html:
* LayoutTests/tiled-drawing/top-content-inset-fixed-attachment-cover-local.html:
* LayoutTests/tiled-drawing/top-content-inset-fixe

--- a/Source/WebKit/WebProcess/WebPage/WebPageTesting.messages.in
+++ b/Source/WebKit/WebProcess/WebPage/WebPageTesting.messages.in
@@ -35,7 +35,7 @@ messages -> WebPageTesting {
 
     ClearWheelEventTestMonitor()
     ResetStateBetweenTests()
-    SetTopContentInset(float contentInset) -> ()
+    SetObscuredContentInsets(float top, float right, float bottom, float left) -> ()
     ClearCachedBackForwardListCounts() -> ()
     SetTracksRepaints(bool trackRepaints) -> ()
     DisplayAndTrackRepaints() -> ()
